vlib/v/checker/tests/prefix_address_bound_method_value_err.vv
struct MethodValueAddress {}

fn (_ MethodValueAddress) value() int {
	return 1
}

m := MethodValueAddress{}
_ := &m.value
